# AI-Basketball-Shot-Detection-Tracker

./: FLUTTER_INTEGRATION.md  FLUTTER_INTEGRATION_GUIDE.md  README-zh.md  README.md  pyproject.toml  requirements.txt  run_demo.sh  test_android_model.py  test_ios_model.py
best_saved_model/: best_full_integer_quant.tflite  best_int8.tflite  best_integer_quant.tflite  fingerprint.pb  metadata.yaml
models/ios/best.mlpackage/: Manifest.json
models/ios/best.mlpackage/Data/com.apple.CoreML/: model.mlmodel
