[project]
name = "ai-basketball-shot-detector"
version = "1.0.0"
description = "Real-Time AI Basketball Shot Detection with YOLOv8 and OpenCV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvzone==1.5.6",
    "ultralytics>=8.0.26",
    "hydra-core>=1.2.0",
    "matplotlib>=3.2.2",
    "numpy>=1.18.5",
    "opencv-python>=4.5.4.60",
    "Pillow>=7.1.2",
    "PyYAML>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.7.0",
    "torchvision>=0.8.1",
    "tqdm>=4.64.0",
    "filterpy==1.4.5",
    "scikit-image>=0.19.3",
    "lapx>=0.5.2",
    "tensorflow>=2.0.0,<=2.19.0",
    "tf-keras<=2.19.0",
    "onnx>=1.12.0,<2.0.0",
    "onnxruntime",
    "onnxslim>=0.1.71",
    "onnx2tf>=1.26.3",
    "sng4onnx>=1.0.1",
    "ai-edge-litert>=1.2.0,<1.4.0",
    "onnx-graphsurgeon",
    "coremltools>=9.0",
]

[tool.uv]
dev-dependencies = []
